# ECPMindPortfol4

./: .replit  app.py  config.json  mood_data.json  project_a3300412-b099-4112-b14a-284412a77047_mood.json  project_a8cb524d-651d-4437-b71d-0629ca737fbf_mood.json  project_da992ec5_mood.json  pyproject.toml  replit.md
attached_assets/: Pasted--Chapter-1-Unleashing-the-Power-of-AI-Authorship-The-dream-of-effortlessly-transforming-your-ide-1753029409186_1753029409195.txt  Pasted-Create-a-new-Python-Replit-project-called-BookGenPro-with-the-following-structure-1-A-Flask-web--1753024722171_1753024722176.txt
exports/: AI for Creatives_20250720_203938.docx  AI for Creatives_20250720_212426.docx
projects/: 3dd159ac-b133-4c2a-97ee-5df6a853530f.json  76822299-3e4e-4c39-8d92-a18a53c01153.json  8164fa2a-9060-4f66-a61c-4192959bbfea.json  a3300412-b099-4112-b14a-284412a77047.json  a8cb524d-651d-4437-b71d-0629ca737fbf.json  da992ec5.json  eb3c44d0-7468-4b94-aa91-953688ea63b3.json
static/: app.js  style.css
static/uploads/: 648f5275-43f8-4735-9860-d8048213d53c_png  a3300412-b099-4112-b14a-284412a77047_jpg
templates/: base.html  book_export.html  book_preview.html  index.html  kdp_book_export.html  mood_tracker.html  pdf_editor.html  project.html  settings.html  standalone_generation.html  upload_raw_text.html
templates/errors/: 400.html  401.html  403.html  404.html  500.html  503.html  generic.html
