[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.26.0",
    "gunicorn>=23.0.0",
    "openai>=1.97.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "weasyprint>=65.1",
    "werkzeug>=3.1.3",
]
